Fixed a bug on smaller devices : background color and effect was still applying due to the use of an empty blur (backdrop-filter: blur(0)) instead of an empty backdrop filter (backdrop-filter: 0).

--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ p {
 
 .card {
     background-color: transparent;
-    backdrop-filter: blur(0);
+    backdrop-filter: 0;
     border-radius: 0;
     background-origin: border-box;
     box-sizing: border-box;
@@ -417,7 +417,7 @@ p {
 }
 
 .media-player-card {
-    backdrop-filter: blur(0);
+    backdrop-filter: 0;
     background-origin: border-box;
     box-sizing: border-box;
     padding: 15px;
@@ -439,7 +439,7 @@ p {
 
 .right-container {
     background-color: transparent;
-    backdrop-filter: blur(0);
+    backdrop-filter: 0;
     display: flex;
     flex-direction: column;
     border-radius: 0;
